--- a/loops/loops_(nice).ipynb
+++ b/loops/loops_(nice).ipynb
@@ -1,1 +1,288 @@
-{"cells": [{"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["<div style=\"text-align:left;font-size:2em\"><span style=\"font-weight:bolder;font-size:1.25em\">SP2273 | Learning Portfolio</span><br><br><span style=\"font-weight:bold;color:darkred\">Loops (Nice)</span></div>"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["## 1 There is more\u2026"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["### 1.1 There is more to list comprehension"]}, {"cell_type": "code", "id": "123456", "metadata": {}, "execution_count": null, "outputs": [], "source": ["\n# Your code here\n"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["### 1.2 Zipping a dictionary"]}, {"cell_type": "code", "id": "123456", "metadata": {}, "execution_count": null, "outputs": [], "source": ["\n# Your code here\n"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["### 1.3 for and while has an else"]}, {"cell_type": "code", "id": "123456", "metadata": {}, "execution_count": null, "outputs": [], "source": ["\n# Your code here\n"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["## Explore 1 :  Changing a list"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["## Explore 2 :  A list of power"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["## Explore 3 :  Time profiling"]}], "metadata": {"kernelspec": {"display_name": "Python 3", "language": "python", "name": "python3"}, "language_info": {"codemirror_mode": {"name": "ipython", "version": 3}, "file_extension": ".py", "mimetype": "text/x-python", "name": "python", "nbconvert_exporter": "python", "pygments_lexer": "ipython3", "version": "3.10.6 (main, Nov 14 2022, 16:10:14) [GCC 11.3.0]"}, "toc": {"base_numbering": 1, "nav_menu": {}, "number_sections": true, "sideBar": true, "skip_h1_title": false, "title_cell": "Table of Contents", "title_sidebar": "Contents", "toc_cell": false, "toc_position": {}, "toc_section_display": true, "toc_window_display": false}, "vscode": {"interpreter": {"hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"}}}, "nbformat": 4, "nbformat_minor": 5}
+{
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "id": "123456",
+   "metadata": {},
+   "source": [
+    "<div style=\"text-align:left;font-size:2em\"><span style=\"font-weight:bolder;font-size:1.25em\">SP2273 | Learning Portfolio</span><br><br><span style=\"font-weight:bold;color:darkred\">Loops (Nice)</span></div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7c71aaca",
+   "metadata": {},
+   "source": [
+    "## 1 There is more…"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "70ca6148",
+   "metadata": {},
+   "source": [
+    "### 1.1 There is more to list comprehension"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "67f19d9e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[0, 'A'],\n",
+       " [0, 'B'],\n",
+       " [0, 'C'],\n",
+       " [1, 'A'],\n",
+       " [1, 'B'],\n",
+       " [1, 'C'],\n",
+       " [2, 'A'],\n",
+       " [2, 'B'],\n",
+       " [2, 'C'],\n",
+       " [3, 'A'],\n",
+       " [3, 'B'],\n",
+       " [3, 'C'],\n",
+       " [4, 'A'],\n",
+       " [4, 'B'],\n",
+       " [4, 'C']]"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[[a,b] for a in range(5) for b in ['A', 'B', 'C']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "369a66b3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[1, 'A'], [1, 'B'], [1, 'C'], [3, 'A'], [3, 'B'], [3, 'C']]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[[a,b] for a in range(5) for b in ['A', 'B', 'C'] if a % 2 != 0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "736694dc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 4, 5, 6, 7]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nested_list=[[1, 2, 3], [4, 5, 6, 7]]\n",
+    "[y for x in nested_list for y in x]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "501f2ed2",
+   "metadata": {},
+   "source": [
+    "### 1.2 Zipping a dictionary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "64112a88",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Natasha Romanoff': 'Black Widow',\n",
+       " 'Tony Stark': 'Iron Man',\n",
+       " 'Stephen Strange': 'Doctor Strange'}"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "super_names=[\"Black Widow\", \"Iron Man\", \"Doctor Strange\"]\n",
+    "real_names=[\"Natasha Romanoff\", \"Tony Stark\", \"Stephen Strange\"]\n",
+    "\n",
+    "dict(zip(real_names, super_names))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1a46b966",
+   "metadata": {},
+   "source": [
+    "### 1.3 for and while has an else"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "f7d2cdf4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No negative numbers in the list\n"
+     ]
+    }
+   ],
+   "source": [
+    "numbers=[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
+    "\n",
+    "for i in numbers:\n",
+    "    if i < 0: break\n",
+    "else:\n",
+    "    print('No negative numbers in the list')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "57430eb5",
+   "metadata": {},
+   "source": [
+    "## Explore 1 :  Changing a list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "f9e46248",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['apple', 'banana', 'jackfruit', 'watermelons', 'durian', 'mangoes', 'strawberries']\n"
+     ]
+    }
+   ],
+   "source": [
+    "fruits = [\"apple\", \"banana\", \"jackfruit\",\n",
+    "          \"pineapple\", \"papaya\", \"watermelons\",\n",
+    "          \"peaches\", \"durian\",  \"mangoes\",\n",
+    "          \"strawberries\", \"passionfruit\"\n",
+    "          ]\n",
+    "\n",
+    "fruits1 = fruits.copy() #copying a list so that it doesn't change the index while looping\n",
+    "\n",
+    "for fruit in fruits1:\n",
+    "    if fruit[0] == \"p\":\n",
+    "        fruits.remove(fruit)\n",
+    "\n",
+    "print(fruits)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "be1514e4",
+   "metadata": {},
+   "source": [
+    "## Explore 2 :  A list of power"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "2714c766",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1, 1, 1], [2, 4, 8], [3, 9, 27], [4, 16, 64], [5, 25, 125]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "maximum_n = 5\n",
+    "result = [[]] * maximum_n\n",
+    "\n",
+    "for n in range(1, maximum_n + 1):\n",
+    "    result[n-1] = [n,n**2,n**3] #.append adds an element to the end of a current list\n",
+    "\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dec0a1ea",
+   "metadata": {},
+   "source": [
+    "## Explore 3 :  Time profiling"
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.8"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+   }
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 5
+}
